--- a/archive/about/README.adoc
+++ b/archive/about/README.adoc
@@ -1,7 +1,9 @@
 
 = Microservces Application Architecture
 :icons: font
-:toc: preamble
+:toc:
+:toc-title:
+:toc-placement: preamble
 :toclevels: 2
 :imagesdir: /images
 
