--- a/walkthroughs/elkStack.adoc
+++ b/walkthroughs/elkStack.adoc
@@ -1,7 +1,8 @@
 = Logging using the ELK stack
 :icons: font
-:toc: preamble
+:toc:
 :toc-title:
+:toc-placement: preamble
 :toclevels: 2
 :12-factor: link:../about/12-factor.adoc
 :api-key: link:../microservices/ApplicationSecurity.adoc
