--- a/archive/microservices/README.adoc
+++ b/archive/microservices/README.adoc
@@ -1,7 +1,9 @@
 = Game Architecture and Technology
 :icons: font
-:toc: preamble
-:toclevels: 1
+:toc:
+:toc-title:
+:toc-placement: preamble
+:toclevels: 2
 
 This section contains information on each of the microservices.  Note that the components here aren't always _strictly_ microservices, but are deployed as individual Dockerized components and broken into separate git projects accordingly.
 
