--- a/walkthroughs/bluemix-cf.adoc
+++ b/walkthroughs/bluemix-cf.adoc
@@ -1,7 +1,8 @@
 = Deploying to IBM Bluemix as Cloud Foundry application
 :icons: font
-:toc: preamble
+:toc:
 :toc-title:
+:toc-placement: preamble
 :toclevels: 2
 
 {empty}
@@ -11,41 +12,41 @@
 - https://console.ng.bluemix.net[Bluemix account] / https://console.ng.bluemix.net/docs/admin/account.html[Signing up for Bluemix]
 - https://docs.cloudfoundry.org/cf-cli/[Cloud Foundry command line]
 
-== Create Bluemix account
+[NOTE]
+.Some notes about your Bluemix account
+====
+After you've logged into Bluemix on the web, your active region,
+organization, and space are shown in the top right-hand corner.
+You'll need these three values in the following steps.
 
-If you already have a Bluemix account, you can skip right over this section.
+image::../images/BluemixRegionOrgSpace.png[caption="Your active Region, Organization, and Space, as shown in Bluemix", title="",link="http://xkcd.com/1597/", height=250]
 
-Sign up for Bluemix at https://console.ng.bluemix.net
-When you sign up, you'll create an IBM ID, create an alias, and
-register with Bluemix.
-
-* Make a note of your username and org, as you will need both later.
-  - By default, the space is `dev` and the org is the project creator's user name.
-    For example, if sara@example.com signs in to Bluemix for the first time,
-    the active space is `dev` and the org is `sara@example.com`.
-
-* Make a note of your region! (US South, United Kingdom, or Australia)
-  - When you log into Bluemix, your logged in username, organization, and
-    space are shown in the top right. If you click in the top right corner,
-    you'll see the region displayed in the panel displayed on the right side
-    of the screen.
+See the https://console.ng.bluemix.net/docs/admin/orgs_spaces.html[Bluemix
+documentation] for more information on Bluemix organizations and spaces.
+====
 
 == Log in using the `cf` command
 
-Login to Bluemix via the command line: `cf login`
-- Enter Bluemix API endpoint (for your region):
-  * US South: `https://api.ng.bluemix.net`
-  * London: `https://api.eu-gb.bluemix.net`
-- Enter email and password for Bluemix login
-- Enter the Bluemix organization
-- Enter the Bluemix space
+Login to Bluemix via the command line:
 
-== Deploying the app
+    cf login
+
+  - Enter Bluemix API endpoint (for your region):
+    * US South: `https://api.ng.bluemix.net`
+    * London: `https://api.eu-gb.bluemix.net`
+  - Enter email and password for Bluemix login
+    * If logging in with a federated ID (if you don't know what this means,
+      you aren't), use the `-sso` option with a
+      https://login.ng.bluemix.net/UAALoginServerWAR/passcode[one-time use password]
+  - Choose a Bluemix organization by number
+  - Choose a Bluemix space by number
+
+== Deploy your application
 
 1. `cf push <cf-app-name> -p <app archive>`
   - Choose a unique app name. This will be used as the first part of the URL, e.g. `cf-app-name` becomes `cf-app-name.mybluemix.net`
   - For `sample-room-java`, the app archive is `target/gameon-room-java.zip`
-  - https://console.ng.bluemix.net/docs/manageapps/depapps.html#dep_apps[Deploying applications by using the cf command]
+  - See: https://console.ng.bluemix.net/docs/manageapps/depapps.html#dep_apps[Deploying applications by using the cf command]
 
 2. After your room has been pushed, you should be able to view it at:
   - US South: `http://<cf-app-name>.mybluemix.net/`
