--- a/walkthroughs/bluemix-ics.adoc
+++ b/walkthroughs/bluemix-ics.adoc
@@ -1,7 +1,8 @@
 = Deploying to IBM Bluemix using a Docker Container
 :icons: font
-:toc: preamble
+:toc:
 :toc-title:
+:toc-placement: preamble
 :toclevels: 2
 :cficDoc: https://console.ng.bluemix.net/docs/containers/container_cli_cfic.html
 :roomRegistration: link:registerRoom.adoc
@@ -14,24 +15,18 @@
 - https://docs.cloudfoundry.org/cf-cli/[Cloud Foundry command line]
 - https://console.ng.bluemix.net/docs/containers/container_cli_cfic_install.html[Install the IBM Containers plugin]
 
-== Create Bluemix accounts
+[NOTE]
+.Some notes about your Bluemix account
+====
+After you've logged into Bluemix on the web, your active region,
+organization, and space are shown in the top right-hand corner.
+You'll need these three values in the following steps.
 
-If you already have a Bluemix account, you can skip right over this section.
+image::../images/BluemixRegionOrgSpace.png[caption="Your active Region, Organization, and Space, as shown in Bluemix", title="",link="http://xkcd.com/1597/", height=250]
 
-Sign up for Bluemix at https://console.ng.bluemix.net
-When you sign up, you'll create an IBM ID, create an alias, and
-register with Bluemix.
-
-* Make a note of your username and org, as you will need both later.
-  - By default, the space is `dev` and the org is the project creator's user name.
-    For example, if sara@example.com signs in to Bluemix for the first time,
-    the active space is `dev` and the org is `sara@example.com`.
-
-* Make a note of your region! (US South, United Kingdom, or Australia)
-  - When you log into Bluemix, your logged in username, organization, and
-    space are shown in the top right. If you click in the top right corner,
-    you'll see the region displayed in the panel displayed on the right side
-    of the screen.
+See the https://console.ng.bluemix.net/docs/admin/orgs_spaces.html[Bluemix
+documentation] for more information on Bluemix organizations and spaces.
+====
 
 == Log in using the `cf` command
 
@@ -45,6 +40,7 @@ for the latest instructions, what follows is the TL;DR version:
   - Enter Bluemix API endpoint (for your region):
     * US South: `https://api.ng.bluemix.net`
     * London: `https://api.eu-gb.bluemix.net`
+    * Sydney: `https://api.au-syd.bluemix.net`
   - Enter email and password for Bluemix login
     * If logging in with a federated ID (if you don't know what this means,
       you aren't), use the `-sso` option with a
@@ -52,20 +48,18 @@ for the latest instructions, what follows is the TL;DR version:
   - Choose a Bluemix organization by number
   - Choose a Bluemix space by number
 
-2. If this is your first time logging in to Bluemix, create a namespace.
-   This step happens only once, and can't be changed, so choose well:
+2. If this is your first time logging in to Bluemix, or using the IBM
+Container service, create a namespace. _This step happens only once, and
+can't be changed, so choose well._
 +
     cf ic namespace set <my_namespace>
 +
     - Use only letters, numbers, or underscores
     - Use 4 to 30 characters
 
-2. Login with the IBM Container service:
+3. Initialize required keys and certificates for the Bluemix docker image registry:
 +
     cf ic init
-+
-This will create the keys and certificates required to work with
-   the Bluemix docker image registry.
 
 == Add the docker image to the IBM Container service registry
 
@@ -99,13 +93,13 @@ https://console.ng.bluemix.net/docs/containers/container_images_pulling.html[pus
 +
     cf ic ip bind <ip address> <tagName>
 
-7. Check the status of your container
+3. Check the status of your container
 +
     cf ic ps
 +
 Wait for it to switch from "Networking" to "Running"
 
-8. Use the public IP address to visit your running container
+4. Use the public IP address to visit your running container
   - For the `sample-room-java` project, use `http://<ip-address>:9080/`.
   - Copy the websocket endpoint address. Use this address in your {roomRegistration}[room registration].
 
