--- a/chronicles/16-watson-news.adoc
+++ b/chronicles/16-watson-news.adoc
@@ -5,25 +5,20 @@
 :game-on: https://game-on.org/
 :amalgam8: http://amalgam8.io
 
-This entry in the Chronicles will seem more like out-takes from a movie, than what has been chronicled so far. Not everyone wants people to see their worst moments placed into public view and I'm no different. So here are some <i>selected</i> screw-ups that might help others who want to stand up a room, by no means am I divulging every unflattering way that I botched the code!
+This entry in the Chronicles will seem more like deleted scenes from a movie, compared to what has been chronicled so far. 
 
 The room I wanted to create was a Watson Alchemy Data API News Room. The details about that, and the code can be found here:
 	http://github.com/bradleyap/Watson-news-sample-room-java
 
-First mistake I'll mention was not quite getting when and where to use "ws://169.46.00.00:9080/room". Guess what, it's important to have "room" postpended on it, even though hitting your room in the browser wouldn't work having it that way, even when you swap out "ws" and put in "http". I was unfortunate to interpret the test page as only relevant for people who had already registered their room. Nuff said about that.
+The first bumps in the road for me were related to navigating the instructions. I decided to raise issues with the gitbook.... and got immediate responses. That was a very positive experience resulting from the personal pain and sufferring of my first attempt at standing up a room.
 
-Another thing I was reminded of was that not all Java EE implementations are the same. You will find many tutorials showing you that JSONObject can be used this way:
+Another thing that slowed me down a tad bit was trying to look at why a simple string edit to initial values of the room description would cause the tests to fail. Tests are sometimes written in a preliminary fashion, and perhaps in projects like GameOn! oriented toward learning; perhaps they are written just to demo having them, not so much demoing how to write them? Here was my quick fix: `mvn install -DskipTests` Yep, I took the path of least resistance.
 
-	JSONObject resultsOb = jsonob.getJsonObject("result");
-	JSONArray arr = resultsOb.getJsonObject("docs");
+It wasn't immediately obvious to me where to use "ws://169.46.00.00:9080/room". To be fair, when hitting the room in a browser, the test page talked about where to use the string, (use it when registring you room), but I was blinded by my own correct interpretation of what was stated in the sample test page, and consequently believed that it's info was only relevant for people who had already registered their room.
 
-However, when you tried to do something with arr, it was null, even if the json data has an array under "docs". The thing that worked was not allowing myself to assign to more than one explicitly declared JSONObject:
+I learned that an API like Watson Alchemy Data is very complex. Many of my coding errors related to an inadequate grasp of the queries that are accepted by this API, even though, yes, I had this tool to help me out: http://querybuilder.alchemyapi.com/builder When you go to this site, it allows you to check boxes for what type of query you want, and displays the query that is built. Then it also shows the JSON data you have retrieved. Quite nice! The JSON you get back is straight-forward, but it's very easy to make mistakes when you transcribe the pattern into code that accesses it.
 
-	JsonArray arr = (JsonArray)jsonob.getJsonObject("result").get("docs");	
-
-And also, I learned that an API like Watson Alchemy Data is very complex. Many of my coding errors related to an inadequate grasp of the queries that are accepted by this API, even though, yes, I had this to help me out: http://querybuilder.alchemyapi.com/builder
-
-And finally, there were these things called a "transaction" that my free account gave me, and the alotted number of "transactions" I was permitted to have was 0. So as soon as I had a transaction, the account would no longer work for me. The problem was I did not know and still do not know what triggers these "transactions". I cheated and asked someone in Bluemix to increase my alotment. That worked. He said there was not a 1-to-1 correspondence between API calls and transactions. That's all I know just now. I know nothing more.
+And finally, there were these things called "transactions" that my free Watson Alchemy API service account gave me, and the alotted number of "transactions" I was permitted to have was zero. So as soon as I had a transaction, the service would no longer work for me. The problem was I did not know and still do not know what triggers these "transactions". Someone on the Bluemix team increases my alotment and that took care of the issue. He said there was not a 1-to-1 correspondence between API calls and transactions. At some point I'll need to find out more about this.
 
 
 
