--- a/chronicles/16-watson-news.adoc
+++ b/chronicles/16-watson-news.adoc
@@ -14,7 +14,7 @@ The first bumps in the road for me were related to navigating the instructions. 
 
 Another thing that slowed me down a tad bit was trying to look at why a simple string edit to initial values of the room description would cause the tests to fail. Tests are sometimes written in a preliminary fashion, and perhaps in projects like GameOn! oriented toward learning; perhaps they are written just to demo having them, not so much demoing how to write them? Here was my quick fix: `mvn install -DskipTests` Yep, I took the path of least resistance.
 
-It wasn't immediately obvious to me where to use "ws://169.46.00.00:9080/room". To be fair, when hitting the room in a browser, the test page talked about where to use the string, (use it when registering you room), but I was blinded by my own correct interpretation of what was stated in the sample test page, and consequently believed that it's info was only relevant for people who had already registered their room.
+It wasn't immediately obvious to me where to use "ws://169.46.00.00:9080/room". To be fair, when hitting the room in a browser, the test page talked about where to use the string, (use it when registering your room), but I was blinded by my own correct interpretation of what was stated in the sample test page, and consequently believed that it's info was only relevant for people who had already registered their room.
 
 I learned that an API like Watson Alchemy Data is very complex. Many of my coding errors related to an inadequate grasp of the queries that are accepted by this API, even though, yes, I had this tool to help me out: http://querybuilder.alchemyapi.com/builder When you go to this site, it allows you to check boxes for what type of query you want, and displays the query that is built. Then it also shows the JSON data you have retrieved. Quite nice! The JSON you get back is straight-forward, but it's very easy to make mistakes when you transcribe the pattern into code that accesses it.
 
